# AI_Voice_Agent_for_Insurance_Renewal_and_Upsell

./: .env.example  ARCHITECTURE.md  Dockerfile  Dockerfile.livekit  README.md  docker-compose.yml  main.py  mock_database.py  pyproject.toml
backend/: README.md
backend/app/: main.py
backend/app/core/: celery_app.py  config.py  database.py  middleware.py
backend/app/models/: __init__.py  call.py  customer.py  customer_policy.py  policy.py  product.py  scheduled_call.py
backend/app/routes/: __init__.py  analytics.py  calls.py  customers.py  policies.py  products.py  scheduler.py
backend/app/schemas/: __init__.py  call.py  customer.py  customer_policy.py  policy.py  product.py  scheduler.py
backend/app/services/: __init__.py  call_service.py  caller.py  customer_policy_service.py  customer_service.py  policy_service.py  product_service.py  scheduler_service.py
backend/app/tasks/: __init__.py  scheduler.py
docs/: scheduler-architecture.md  scheduler-system.md
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Modal.jsx  Sidebar.jsx  StatsCard.jsx  StatusBadge.jsx
frontend/src/pages/: Calls.jsx  Customers.jsx  Dashboard.jsx  Policies.jsx  Products.jsx  Scheduler.jsx
livekit/: agent.py  config.py  database.py  main.py  models.py  resilience.py  services.py  state.py  tools.py
