[project]
name = "ai-voice-agent-for-insurance-renewal-and-upsell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[aws,deepgram,google,silero]>=1.3.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]
