[project]
name = "ai-voice-agent-for-insurance-renewal-and-upsell"
version = "0.1.0"
description = "AI Voice Agent for Insurance Renewal and Upsell"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LiveKit Agent
    "livekit-agents[aws,deepgram,google,silero]>=1.3.5",
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.31.0",
    # Pydantic
    "pydantic>=2.5.0",
    "pydantic-settings>=2.12.0",
    # Utilities
    "python-dotenv>=1.2.1",
    "httpx>=0.26.0",
    # Task Queue
    "celery[redis]>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]
